refactor: 项目构建配置多维度升级与兼容性优化
本次提交包含多项核心改进：
1. 构建与依赖升级：更新Gradle到8.13，升级AGP到8.13.2，Kotlin到2.2.21，调整Python到3.11.9，Java版本到21并启用脱糖支持
2. API兼容性修复：适配Android最新权限与API变更，修复替换废弃API调用
3. 代码质量优化：添加泛型类型安全标注，完善非空检查，替换过时的网络请求与视图绑定API
4. 功能增强：优化字幕加载、搜索逻辑，改进后台服务管理，更新音频属性配置
5. 架构调整：重构部分页面的返回逻辑，简化工具类代码，移除冗余依赖
6. 依赖与配置调整：大范围更新第三方库版本，修复OkHttp相关API变更

注意，升级后当前项目最低支持 Android 7.0（API 24）